# mpgrep

./: LICENSE  README.md  environment.yaml  pyproject.toml
mpgrep/: mpgrep.py
src/mpgrep/: __init__.py  mpgrep.py
